# K1_5v5_DEMO

./: .gitignore  README.md
configs/: fastdds.xml
distribution/: build_package.sh  build_uninstall.sh  install.sh  uninstall.sh
docs/: README.md  architecture.md  ball_error_budget_and_fix_plan.md  ball_localization_calibration.md  brain.md  brain_fast_iteration_plan.md  configuration.md  list.md  notifications_and_team_communication.md  rerun.md  robot_state_voice_checklist.md  vision.md
scripts/: assist.sh  build.sh  build_brain.sh  build_debug.sh  calibrate.sh  chase.sh  start.sh  start_brain.sh  start_calibration.sh  start_game_controller.sh  start_joystick.sh  start_realsense.sh  start_vision.sh  stop.sh  test_visual_kick.py
src/booster_msgs/: CMakeLists.txt  package.xml
src/booster_msgs/msg/: RpcReqMsg.msg
src/booster_ros2_interface/: CMakeLists.txt  README.md  package.xml
src/booster_ros2_interface/include/booster_interface/booster_interface/: message_utils.hpp
src/booster_ros2_interface/msg/: BoosterApiReqMsg.msg  BoosterApiRespMsg.msg  ImuState.msg  LowCmd.msg  LowState.msg  MotorCmd.msg  MotorState.msg  RawBytesMsg.msg  RemoteControllerState.msg
src/booster_ros2_interface/src/: message_utils.cpp
src/booster_ros2_interface/srv/: RpcService.srv
src/brain/: CMakeLists.txt  package.xml
src/brain/behavior_trees/: chase.xml  demo.xml  game.xml
src/brain/behavior_trees/subtrees/: subtree_auto_standup_and_locate.xml  subtree_cam_find_and_track_ball.xml  subtree_find_ball.xml  subtree_goal_keeper_freekick.xml  subtree_goal_keeper_play.xml  subtree_locate.xml  subtree_striker_freekick.xml  subtree_striker_play.xml
src/brain/config/: config.yaml
src/brain/include/: SPLCoachMessage.h  brain.h  brain_communication.h  brain_config.h  brain_data.h  brain_log.h  brain_tree.h  buffer.h  locator.h  posProjector.h  robot_client.h  role_manager.h  stablizer.h  support_position_planner.h  team_communication_msg.h  types.h
src/brain/include/utils/: math.h  misc.h  print.h
src/brain/launch/: launch.py
src/brain/msg/: Kick.msg
src/brain/src/: brain.cpp  brain_communication.cpp  brain_config.cpp  brain_data.cpp  brain_log.cpp  brain_tree.cpp  locator.cpp  main.cpp  robot_client.cpp  role_manager.cpp  support_position_planner.cpp
src/game_controller/: CMakeLists.txt  README.md  package.xml
src/game_controller/include/: RoboCupGameControlData.h  SPLCoachMessage.h  game_controller_node.h
src/game_controller/launch/: launch.py
src/game_controller/src/: game_controller_node.cpp  main.cpp
src/game_controller/utils/game_controller_package/: install.sh  readme.md
src/game_controller/utils/game_controller_package/service/: fastdds.xml  robocup_game_controller.service  robocup_joystick.service  start_game_controller.sh  start_joystick.sh
src/robocup_ros2_interface/: .gitignore  README.md
src/robocup_ros2_interface/src/game_controller_interface/: CMakeLists.txt  package.xml
src/robocup_ros2_interface/src/game_controller_interface/msg/: GameControlData.msg  RobotInfo.msg  TeamInfo.msg
src/robocup_ros2_interface/src/vision_interface/: CMakeLists.txt  package.xml
src/robocup_ros2_interface/src/vision_interface/msg/: Ball.msg  CalParam.msg  DetectedObject.msg  Detections.msg  DetectionsTrack.msg  ImageHeadPosition.msg  LineSegments.msg  SegmentationLine.msg  SegmentationPoint.msg  SegmentationResult.msg
src/vision/: CHANGELOG  CMakeLists.txt  install_drvier.md  package.xml
src/vision/config/: field.yaml  vision.yaml
src/vision/include/booster_vision/: color_classifier.hpp  img_bridge.h  vision_node.h
src/vision/include/booster_vision/base/: data_logger.hpp  data_syncer.hpp  intrin.h  misc_utils.hpp  pointcloud_process.h  pose.h
src/vision/include/booster_vision/calibration/: board_detector.h  calibration.h  optimizor.hpp
src/vision/include/booster_vision/model/: data_types.h  detector.h  segmentor.h
src/vision/include/booster_vision/model/onnx/: detection_impl.h
src/vision/include/booster_vision/model/trt/: .clang-format  block.h  calibrator.h  config.h  cuda_utils.h  impl.h  logging.h  model.h  postprocess.h  preprocess.h  types.h  yololayer.h
src/vision/include/booster_vision/pose_estimator/: hungarian_matching.hpp  pose_estimator.h
src/vision/launch/: launch.py
src/vision/msg/: Detections.msg  LineSegments.msg
src/vision/scripts/logger_service/: disk_cleanup.py  install_service.sh  move_data_to_storage.py
src/vision/scripts/model/: build_engine.sh  requirements.txt
src/vision/src/: CMakeLists.txt  img_bridge.cpp  main.cpp  vision_node.cpp
src/vision/src/base/: CMakeLists.txt  data_syncer.cpp  intrin.cpp  pointcloud_process.cpp  pose.cpp
src/vision/src/calibration/: CMakeLists.txt  board_detector.cpp  calibration.cpp  calibration_node.cpp
src/vision/src/model/: CMakeLists.txt  detector.cc  segmentor.cc
src/vision/src/model/onnx/: CMakeLists.txt  detection_impl.cpp
src/vision/src/model/trt/: CMakeLists.txt  block.cpp  calibrator.cpp  impl.cpp  model.cpp  postprocess.cpp  postprocess.cu  preprocess.cu  yololayer.cu  yolov8_det.cpp  yolov8_seg.cpp
src/vision/src/pose_estimator/: CMakeLists.txt  pose_estimator.cpp
src/vision/systemd/: booster-vision-data.service
src/vision/test/: CMakeLists.txt  test_color_classifier.cpp
src/vision/test/base/: test_intrin.cpp  test_utils.cpp
src/vision/test/model/: test_yolov8.cpp  validator.cpp
utils/: install_auto_start_assist.sh
utils/service/: robocup_game_assist.service
