<?xml version="1.0"?>
<package format="3">
    <name>vision</name>
    <version>1.0.0</version>
    <description>Accerated Revised Yolo v8 tiny model by using Nvidia TensorRT</description>
    <maintainer email="guwen@boosterobotics.com">Gu Wen</maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>boost</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>image_transport</depend>
    <!-- <depend>cv_bridge</depend> -->
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>builtin_interfaces</depend>
    <depend>vision_interface</depend>

    <depend>rosidl_default_generators</depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
